<resources>
    <string name="app_name">grokart</string>
    <string name="groKart">GroKart</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="welcome_user">Welcome </string>
    <string name="create_new_list">Create New List</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="view_list_history">View List History</string>
    <string name="settings">Settings</string>
    <string name="view_profile">Your Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to edit profile -->
    <string name="edit_profile">Edit Profile</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="preferred_store">Preferred Store</string>
    <string name="edit_response_success">Your profile has been successfully updated</string>
    <string name="edit_response_failure">Failed to update profile</string>
    <!-- Strings related to dashboard -->
    <string name="create_list">Create new list</string>
    <string name="edit_profile_lc">Edit profile</string>
    <string name="view_lists">View lists</string>
    <!-- Strings related to Admin User   -->
    <string name="create_new_storesAdm">Create New Store Admin</string>
    <string name="app_activity">Show App Activity</string>
    <string name="hide_app_activity">Hide App Activity</string>
    <string name="user_count_title">Users Count</string>
    <string name="store_count_title">Stores Count</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to Create New Lists Page    -->
    <string name="name_your_kart">Name your Kart</string>
    <string name="view_your_kart">View your Kart</string>


    <!-- Strings related to View Previous Lists Page    -->
    <string name="view_prev_lists">My List History</string>
    <string name="info_btn">Kart Info</string>
    <string name="edit_btn">Edit Kart</string>
    <string name="delete_btn">Delete Kart</string>
    <string name="temp_list_name">List Name</string>
    <string name="add_btn">add</string>

    <!-- Strings related to Reports Page -->
    <string name="reports_page_title">Reports</string>
    <string name="temp_report_title">Report name</string>
    <string name="create_new_reports">Create report</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="store">Store</string>

    <string name="view_store_items">View Store Items</string>
    <string name="total_Price">$</string>

    <!-- String related to View List Details Page -->
    <string name="view_kart_items">View Your Items</string>
    <string name="total_items_bought">Total Items: </string>
    <string name="total_price">Total Price: $</string>
    <string name="confirm_kart_creation">Confirm Kart Creation</string>

<!--    String related Create Store Admin -->
    <string name="store_name">Store Name</string>
    <string name="view_store_name">View Store Name</string>
    <string name="description_heading">Description:</string>
    <string name="status_icon">Status icon</string>
    <string name="status_heading">Status:</string>
    <string name="title_heading">Title:</string>
    <string name="report_details_page_title">Report Details</string>
    <string name="messages_heading">Messages:</string>
    <string name="report_status_default">report status</string>
    <string name="update">Update</string>
    <string name="comment">Comment</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="chat">Chat</string>
    <string name="customer_support">Customer Support</string>
    <string name="support">Support</string>
    <string name="store_items">Store Items</string>


</resources>