<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_appTitle2"
        android:layout_width="201dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/k2d_bold"
        android:text="@string/groKart"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_goEditProfile"
        android:layout_width="344dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/green"
        android:text="@string/edit_profile_lc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_appTitle2" />

    <Button
        android:id="@+id/btn_goCreateList"
        android:layout_width="344dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/green"
        android:text="@string/create_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_goEditProfile" />

    <Button
        android:id="@+id/btn_goLists"
        android:layout_width="344dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/green"
        android:text="@string/view_lists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_goCreateList" />

</androidx.constraintlayout.widget.ConstraintLayout>