<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main"
    style="@style/constraint_background_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="src_in"
    android:foregroundTintMode="src_in"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Grokart.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Grokart.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_main_appTitle"
        android:layout_width="201dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/k2d_bold"
        android:text="@string/groKart"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tv_main_welcome"
        android:layout_width="298dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:text="@string/welcome_user"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_appTitle" />

    <Button
        android:id="@+id/btn_main_createNewList"
        style="@style/white_button"
        android:text="@string/create_new_list"
        app:cornerRadius="10dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_welcome"
        app:layout_constraintVertical_bias="0.411" />

    <Button
        android:id="@+id/btn_main_viewListHistory"
        style="@style/white_button"
        android:layout_width="317dp"
        android:layout_height="64dp"
        android:text="@string/view_list_history"
        app:cornerRadius="10dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_createNewList"
        app:layout_constraintVertical_bias="0.187" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="411dp" />


</androidx.constraintlayout.widget.ConstraintLayout>