<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_admHome"
    android:exported="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/constraint_background_style"
    tools:context=".AdminHomeActivity">

    <Button
        android:id="@+id/btn_createNewStoreAdm"
        style="@style/white_button"
        android:layout_width="332dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_new_storesAdm"
        android:theme="@style/green_button"
        app:cornerRadius="10dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_admHome_title" />

    <TextView
        android:id="@+id/tv_admHome_title"
        android:layout_width="201dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/k2d_bold"
        android:text="@string/groKart"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_viewAppActivity"
        android:layout_width="234dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:text="@string/app_activity"
        android:theme="@style/green_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_createNewStoreAdm" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="154dp"
        android:layout_height="108dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shapes"
        android:foregroundTint="#F8F8F8"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_viewAppActivity">

        <TextView
            android:id="@+id/tv_userCountTitle"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/white"
            android:backgroundTintMode="src_atop"
            android:paddingTop="10dp"
            android:text="@string/user_count_title"
            android:textAlignment="center"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/tv_userCount"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="154dp"
        android:layout_height="107dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shapes"
        android:foregroundTint="#F8F8F8"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/btn_viewAppActivity">

        <TextView
            android:id="@+id/tv_storeCountTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:text="@string/store_count_title"
            android:textAlignment="center"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/tv_storeCount"
            android:layout_width="154dp"
            android:layout_height="63dp"
            android:background="@color/white"
            android:baselineAligned="false"
            android:paddingTop="10dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>