<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Grokart.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Grokart.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_support_title"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/k2d_bold"
        android:text="@string/customer_support"
        android:textAlignment="center"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <Button
        android:id="@+id/btn_reports"
        style="@style/white_button"
        android:layout_width="317dp"
        android:layout_height="64dp"
        android:layout_marginBottom="15dp"
        android:text="@string/reports_page_title"
        app:cornerRadius="10dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_chat"
        style="@style/white_button"
        android:layout_width="317dp"
        android:layout_height="64dp"
        android:layout_marginBottom="50dp"
        android:text="@string/chat"
        app:cornerRadius="10dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>