<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_comment_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="-9sp"
        android:text="Comment"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_description" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Grokart.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Grokart.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_reports_page_title"
        android:layout_width="277dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/k2d_bold"
        android:text="@string/report_details_page_title"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/reportsMsgResponse"
        android:layout_width="359dp"
        android:layout_height="19dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reports_page_title" />

    <TextView
        android:id="@+id/tv_report_title_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="25dp"
        android:layout_weight=".25"
        android:lineSpacingExtra="-9sp"
        android:text="@string/title_heading"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportsMsgResponse" />

    <TextView
        android:id="@+id/tv_report_title"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight=".75"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_title_heading" />

    <TextView
        android:id="@+id/tv_report_status_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:layout_weight=".25"
        android:lineSpacingExtra="-9sp"
        android:text="@string/status_heading"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_title" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_status_heading">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/status_icon"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="233dp"
            android:layout_height="50dp"
            android:background="@color/teal_700"
            android:backgroundTint="#D9D9D9"
            android:backgroundTintMode="src_in"
            android:contentDescription="@string/preferred_store"
            android:ems="10"
            android:minHeight="48dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_report_description_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="-9sp"
        android:text="@string/description_heading"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <TextView
        android:id="@+id/tv_report_description"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight=".75"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_description_heading" />

    <Button
        android:id="@+id/btn_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_comment" />

    <EditText
        android:id="@+id/et_comment"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_comment_heading" />

</androidx.constraintlayout.widget.ConstraintLayout>