<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_logo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_appNameTitle"
        android:layout_width="303dp"
        android:layout_height="70dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/k2d_bold"
        android:text="@string/groKart"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="164dp"
        android:layout_height="150dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="152dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_appNameTitle"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="182dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="@color/green"
        android:backgroundTintMode="@color/green_logo"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="67dp"
        android:backgroundTint="@color/green"
        android:backgroundTintMode="@color/green_logo"
        android:text="@string/register"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>