<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".RegisterActivity">

    <!-- Username -->

    <Button
        android:id="@+id/btn_register"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="67dp"
        android:backgroundTint="@color/green"
        android:backgroundTintMode="@color/green_logo"
        android:text="@string/register"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_appTitle"
        android:layout_width="201dp"
        android:layout_height="70dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/k2d_bold"
        android:text="@string/groKart"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="185dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"

        android:layout_marginStart="35dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="191dp"
        android:layout_marginBottom="10dp"
        android:lineSpacingExtra="-9sp"
        android:text="@string/username"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_appTitle" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="183dp"
        android:layout_height="28dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="11dp"
        android:text="@string/password"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="42dp"
        android:background="@color/teal_700"
        android:backgroundTint="#D9D9D9"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tv_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="71dp"
        android:background="@color/teal_700"
        android:backgroundTint="#D9D9D9"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />
</androidx.constraintlayout.widget.ConstraintLayout>